[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ceiling.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Cave_tiles-6.png.png" type="Texture" id=3]
[ext_resource path="res://Cave World.gd" type="Script" id=4]
[ext_resource path="res://Assets/Cave_tiles-4.png.png" type="Texture" id=5]
[ext_resource path="res://Cave_background.gd" type="Script" id=6]
[ext_resource path="res://Powerup Spawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Minecraft.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/BeepBox-Song_Scifi.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.4, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 85.3333 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.8, 85.3333 )

[node name="Cave World" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Label" type="Label" parent="CanvasLayer"]
modulate = Color( 0.960784, 0.909804, 0.819608, 1 )
self_modulate = Color( 0.960784, 0.909804, 0.819608, 1 )
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
custom_colors/font_color = Color( 0.960784, 0.909804, 0.819608, 1 )
custom_fonts/font = SubResource( 4 )
text = "Score : 0"

[node name="Label2" type="Label" parent="CanvasLayer"]
visible = false
modulate = Color( 0.960784, 0.909804, 0.819608, 1 )
self_modulate = Color( 0.960784, 0.909804, 0.819608, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -16.0
margin_right = 51.0
margin_bottom = 11.0
custom_colors/font_color = Color( 0.960784, 0.909804, 0.819608, 1 )
custom_fonts/font = SubResource( 4 )
text = "Special Power Used 
   Price increased"

[node name="Special_timer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Ceiling" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, -72 )
z_index = 3

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 80, 144 )
scale = Vector2( 2.5, 0.75 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2( -13, 56 )
scale = Vector2( 2.5, 0.75 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2( 173, 56 )
scale = Vector2( 2.5, 0.75 )
shape = SubResource( 3 )

[node name="CaveTiles-4png" type="Sprite" parent="Ground"]
position = Vector2( 80, 192 )
z_index = -1
texture = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 8, 120 )
JUMP_FORCE = -350

[node name="MainCamera" type="Camera2D" parent="."]

[node name="Cave_background" type="ParallaxBackground" parent="."]
script = ExtResource( 6 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cave_background"]
motion_mirroring = Vector2( 160, 0 )

[node name="GBjam11CaveTiles" type="Sprite" parent="Cave_background/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false

[node name="Powerup Spawner" parent="." instance=ExtResource( 7 )]
position = Vector2( 216, 0 )
z_index = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 80, 72 )
stream = ExtResource( 9 )
volume_db = 5.0
autoplay = true

[connection signal="timeout" from="Special_timer" to="." method="_on_Special_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
